--- a/循环引用攻略.md
+++ b/循环引用攻略.md
@@ -2,7 +2,7 @@
 
 * 在项目中增加下面的Symbolic Breakpoint，有助于发现循环引用
 
-![cyclicReferenceSymbolicBreakpoint](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Pasted%20Graphic.tiff)
+![cyclicReferenceSymbolicBreakpoint](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/PastedGraphic.png)
 
 ### cellForRowAt方法中常见的循环引用
 
