--- a/更新日志.md
+++ b/更新日志.md
@@ -8,3 +8,6 @@ create [iOS开发中的坑与注意事项](https://github.com/ChaselAn/dev-blog/
 
 create [浅谈APP架构—MVC](https://github.com/ChaselAn/dev-blog/blob/master/%E6%B5%85%E8%B0%88APP%E6%9E%B6%E6%9E%84%E2%80%94MVC.md)
 
+## 2019.01.28
+
+update [浅谈APP架构—MVC](https://github.com/ChaselAn/dev-blog/blob/master/%E6%B5%85%E8%B0%88APP%E6%9E%B6%E6%9E%84%E2%80%94MVC.md)
