--- a/更新日志.md
+++ b/更新日志.md
@@ -1,5 +1,13 @@
 # 更新日志
 
+## 2019.02.20
+
+create [IAP接入与踩坑](https://github.com/ChaselAn/dev-blog/blob/master/IAP%E6%8E%A5%E5%85%A5%E4%B8%8E%E8%B8%A9%E5%9D%91.md)
+
+## 2019.01.28
+
+update [浅谈APP架构—MVC](https://github.com/ChaselAn/dev-blog/blob/master/%E6%B5%85%E8%B0%88APP%E6%9E%B6%E6%9E%84%E2%80%94MVC.md)
+
 ## 2019.01.22
 
 create [循环引用攻略](https://github.com/ChaselAn/dev-blog/blob/master/%E5%BE%AA%E7%8E%AF%E5%BC%95%E7%94%A8%E6%94%BB%E7%95%A5.md)
@@ -7,7 +15,3 @@ create [循环引用攻略](https://github.com/ChaselAn/dev-blog/blob/master/%E5
 create [iOS开发中的坑与注意事项](https://github.com/ChaselAn/dev-blog/blob/master/iOS%E5%BC%80%E5%8F%91%E4%B8%AD%E7%9A%84%E5%9D%91%E4%B8%8E%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9.md)
 
 create [浅谈APP架构—MVC](https://github.com/ChaselAn/dev-blog/blob/master/%E6%B5%85%E8%B0%88APP%E6%9E%B6%E6%9E%84%E2%80%94MVC.md)
-
-## 2019.01.28
-
-update [浅谈APP架构—MVC](https://github.com/ChaselAn/dev-blog/blob/master/%E6%B5%85%E8%B0%88APP%E6%9E%B6%E6%9E%84%E2%80%94MVC.md)
