--- a/更新日志.md
+++ b/更新日志.md
@@ -2,7 +2,7 @@
 
 ## 2019.02.20
 
-create [IAP接入与丢单处理](https://github.com/ChaselAn/dev-blog/blob/master/IAP%E6%8E%A5%E5%85%A5%E4%B8%8E%E8%B8%A9%E5%9D%91.md)
+create [IAP接入与丢单处理](https://github.com/ChaselAn/dev-blog/blob/master/IAP%E6%8E%A5%E5%85%A5%E4%B8%8E%E4%B8%A2%E5%8D%95%E5%A4%84%E7%90%86.md)
 
 ## 2019.01.28
 
