--- a/更新日志.md
+++ b/更新日志.md
@@ -1,5 +1,9 @@
 # 更新日志
 
+## 2019.03.25
+
+create [通过Cocoapods在iOS项目中集成Flutter](https://github.com/ChaselAn/dev-blog/blob/master/%E9%80%9A%E8%BF%87Cocoapods%E5%9C%A8iOS%E9%A1%B9%E7%9B%AE%E4%B8%AD%E9%9B%86%E6%88%90Flutter.md)
+
 ## 2019.02.20
 
 create [IAP接入与丢单处理](https://github.com/ChaselAn/dev-blog/blob/master/IAP%E6%8E%A5%E5%85%A5%E4%B8%8E%E4%B8%A2%E5%8D%95%E5%A4%84%E7%90%86.md)
