--- a/更新日志.md
+++ b/更新日志.md
@@ -1,5 +1,9 @@
 # 更新日志
 
+## 2019.03.29
+
+update [iOS开发中的坑与注意事项](https://github.com/ChaselAn/dev-blog/blob/master/iOS%E5%BC%80%E5%8F%91%E4%B8%AD%E7%9A%84%E5%9D%91%E4%B8%8E%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9.md)
+
 ## 2019.03.25
 
 create [通过Cocoapods在iOS项目中集成Flutter](https://github.com/ChaselAn/dev-blog/blob/master/%E9%80%9A%E8%BF%87Cocoapods%E5%9C%A8iOS%E9%A1%B9%E7%9B%AE%E4%B8%AD%E9%9B%86%E6%88%90Flutter.md)
