--- a/每日单词.md
+++ b/每日单词.md
@@ -8,19 +8,19 @@
 
 2. object oriented：面向对象
 
-3. principles [/'prɪnsɪp(ə)l/] [/'prɪnsəpl/]：原则，原理；准则，规范
+3. principle [/'prɪnsɪp(ə)l/] [/'prɪnsəpl/]：原则，原理；准则，规范
 
 4. audience [/'ɔːdɪəns/] [/'ɔdɪəns/]：观众；听众；读者
 
 5. is intended for：适用于
 
-6. pillars [/'pɪlə/] [/'pɪlɚ/]：柱子；基础，支柱
+6. pillar [/'pɪlə/] [/'pɪlɚ/]：柱子；基础，支柱
 
-7. Encapsulation [/in,-kæpsə'leiʃən/] [/in,-kæpsə'leiʃən/]：封装
+7. encapsulation [/in,-kæpsə'leiʃən/] [/in,-kæpsə'leiʃən/]：封装
 
-8. Abstraction [/əb'strækʃ(ə)n/]  [/æb'strækʃən/]：抽象
+8. abstraction [/əb'strækʃ(ə)n/]  [/æb'strækʃən/]：抽象
 
-9. Polymorphism [/ˌpɒlɪ'mɔːfɪz(ə)m/] [/ˌpɑlɪ'mɔrfɪzm/]：多态
+9. polymorphism [/ˌpɒlɪ'mɔːfɪz(ə)m/] [/ˌpɑlɪ'mɔrfɪzm/]：多态
 
 10. Inheritance [/ɪn'herɪt(ə)ns/]  [/ɪn'hɛrɪtəns/]：继承
 
@@ -46,7 +46,7 @@
 
 21. alter [/'ɔːltə/]  [/ˈɔltɚ/]：改变；修改
 
-22. shape [/ʃeɪp/] [/ʃep/]：形状；塑造，使成型
+22. shape [/ʃeɪp/] [/ʃeɪp/]：形状；塑造，使成型
 
 23. eventually [/ɪ'ventʃʊəlɪ/] [/ɪ'vɛntʃuəli/]：终于；最后
 
@@ -58,7 +58,7 @@
 
 27. integral [/'ɪntɪgr(ə)l/]  [/'ɪntɪɡrəl/]：构成整体所必需的
 
-28. degradation [/ˌdegrə'deɪʃ(ə)n/]  [/ˌdɛɡrə'deʃən/]：下降，降低；堕落；退化
+28. degradation [/ˌdegrə'deɪʃ(ə)n/]  [/ˌdɛɡrə'deɪʃən/]：下降，降低；堕落；退化
 
 29. damage [/'dæmɪdʒ/]  [/'dæmɪdʒ/]：损失，损害
 
