--- a/每日单词.md
+++ b/每日单词.md
@@ -136,3 +136,26 @@
 5. advantage [/əd'vɑːntɪdʒ/] [/əd'væntɪdʒ/]：优点；好处
 6. advantageous [/ædvən'teɪdʒəs/] [/'ædvən'tedʒəs/]：有利的
 7. additional [/ə'dɪʃ(ə)n(ə)l/] [/ə'dɪʃənl/]：增加的，额外的，另外的
+8. assume [/ə'sjuːm/]  [/ə'sum/]：假定；承担；呈现；采取；装腔作势
+9. feasible [/'fiːzɪb(ə)l/]  [/'fizəbl/]：可行的；可能的；可实行的
+10. utilize [/ˈju:tilaiz/]  [/'jutəlaɪz/]：利用
+11. sensible [/'sensɪb(ə)l/]  [/'sɛnsəbl/]：明智的；意识到的；通晓事理的；明显的
+12. satisfy [/'sætɪsfaɪ/] [/'sætɪsfaɪ/]：使满意； 满足；使确信；符合，达到
+13. requirement [/rɪ'kwaɪəm(ə)nt/] [/rɪ'kwaɪɚmənt/]：需求；要求，必要条件
+14. be affected：受到影响
+15. modifications [/'mɒdɪfaɪ/] [/'mɑdɪfaɪ/]：修改，修饰；更改
+16. orthogonal [/ɔː'θɒg(ə)n(ə)l/] [/ɔr'θɑgənəl/]：直角的，正交的；垂直的
+17. statement [/'steɪtm(ə)nt/] [/'stetmənt/]：声明，陈述
+18. violate [/'vaɪəleɪt/] [/'vaɪəleɪt/]：违反，违背；侵犯
+19. derive [/dɪ'raɪv/]  [/dɪ'raɪv/]：派生；源于；得到
+20. per [/pɜː/] [/pɚ/]：依据，根据；通过，由
+21. considered [/kən'sɪdəd/] [/kən'sɪdɚd/]：经过仔细考虑的
+22. anticipated [/æn'tɪsə,pet/] [/æn'tɪsə,pet/]：预先的；预期的
+23. provision [/prə'vɪʒ(ə)n/] [/prə'vɪʒn/]：供应，提供；准备；规定，条款
+24. virtual [/'vɜːtjʊəl/] [/'vɝtʃuəl/]：虚拟的；实质上的
+25. desired [/di'zaiəd/] [/di'zaiəd/]：渴望的；预期的
+26. commandments [/kə'mɑːndmənt/] [/kə'mændmənt/]：戒条，戒律
+27. wondering [/'wʌndərɪŋ/] [/'wʌndərɪŋ/]：感到惊奇，觉得奇怪，疑惑地
+28. prior [/'praɪə/] [/'praɪɚ/]：在先的；优先的；在前
+29. Simply put：简单的说
+30. in spite of：尽管，尽管如此
