--- a/每日单词.md
+++ b/每日单词.md
@@ -159,3 +159,26 @@
 28. prior [/'praɪə/] [/'praɪɚ/]：在先的；优先的；在前
 29. Simply put：简单的说
 30. in spite of：尽管，尽管如此
+
+## 第四天
+
+1. geometric [/ˌdʒɪə'metrɪk/] [/ˌdʒiə'mɛtrɪk/]：几何的；几何图案的
+2. rectangle [/'rektæŋg(ə)l/] [/'rɛktæŋɡl/]：长方形；矩形
+3. square [/skweə/] [/skwɛr/]：正方形；直角的
+4. snippet [/'snɪpɪt/] [/ˈsnɪpɪt/]：片段；小片
+5. one can say：我们可以说
+6. concrete [/'kɒŋkriːt/] [/'kɑŋkrit/]：实在的，具体的；凝结
+7. desktop [/ˈdeskˌtɔp/] [/'dɛsk'tɑp/]：桌面
+8. a couple of：几个
+9. cabinet [/'kæbɪnɪt/] [/'kæbɪnət/]：机柜，内阁，橱柜；私下的
+10. slot [/slɒt/] [/slɑt/]：插槽
+11. motherboard [/ˈmʌðəbɔ:d/] [/'mʌðɚbɔrd/]：底板；主机板；母板；电脑主板
+12. assembly [/ə'semblɪ/] [/ə'sɛmbli/]：装配；集合
+13. internal [/ɪn'tɜːn(ə)l/] [/ɪn'tɝnl/]：内部的；内在的；国内的
+14. imagine [/ɪ'mædʒɪn/] [/ɪ'mædʒɪn/]：想象；设想；猜想
+15. situation [/sɪtjʊ'eɪʃ(ə)n/] [/ˌsɪtʃu'eʃən/]：形势；情况；位置；环境
+16. external [/ɪk'stɜːn(ə)l/] [/ɪk'stɝnl/]：外部的；表面的；外面的；外国的
+17. related to：与...有关
+18. profit [/'prɒfɪt/] [/'prɑfɪt/]：利润，利益；有益于
+19. intellisense：语法提示；智能感知
+20. 
