--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -1,2 +1,17 @@
 * 我们的软件体系中，最上层的是应用程序，比如我们平时用到的网络浏览器、Email客户端、多媒体播放器、图片浏览器等。从整个层次结构上来看，开发工具与应用程序是属于同一个层次的，因为它们都是用一个接口，那就是操作系统应用程序编程接口(Application Programming Interface)。应用程序接口的提供者是运行库，什么样的运行库提供什么样的API。
-* 
+
+* 从程序源代码到最终可执行文件的4个步骤：预编译、编译、汇编、链接。
+
+  ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/code_to_exe.png)
+
+* 编译器将C程序源代码转变成汇编代码的若干个步骤：词法分析、语法分析、语义分析、中间代码生成、目标代码生成与优化。
+
+* 代码段(.text)：目标文件中，源代码编译后的机器指令经常被放在代码段里
+
+* 数据段(.data)：目标文件中，源代码编译后的全局变量和局部静态变量数据经常放在数据段
+
+* .bss段：目标文件中，源代码编译后的未初始化的全局变量和局部静态变量一般放在.bss段里
+
+* 只读数据段(.rodata)：只读数据段存放的是只读数据，一般是程序里面的只读变量和字符串常量。有时候编译器会把字符串常量放到数据段(.data)
+
+* 总体来说，程序源代码被编译以后主要分成两种段：程序指令与程序数据。代码段属于程序指令，而数据段和.bss段属于程序数据。对于进程来说，指令区域是只读的，数据区域是可读写的。
