--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -1,10 +1,42 @@
 * 我们的软件体系中，最上层的是应用程序，比如我们平时用到的网络浏览器、Email客户端、多媒体播放器、图片浏览器等。从整个层次结构上来看，开发工具与应用程序是属于同一个层次的，因为它们都是用一个接口，那就是操作系统应用程序编程接口(Application Programming Interface)。应用程序接口的提供者是运行库，什么样的运行库提供什么样的API。
 
-* 从程序源代码到最终可执行文件的4个步骤：预编译、编译、汇编、链接。
+* 从程序源代码到最终可执行文件的4个步骤：预处理（Prepressing）、编译（Compilation）、汇编（Assembly）、链接（Linking）。
 
-  ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/code_to_exe.png)
+  ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/code_to_exe.png)
 
-* 编译器将C程序源代码转变成汇编代码的若干个步骤：词法分析、语法分析、语义分析、中间代码生成、目标代码生成与优化。
+## 预编译（预处理）
+
+​	预编译过程主要处理那些源代码文件中的以“#”开始的预编译指令。比如“#include”、“#define”等，主要处理规则如下：
+
+* 将所有的“#define”删除，并且展开所有的宏定义
+
+* 处理所有条件预编译指令，比如“#if”、“#ifdef”、“#elif”、“#else”、“#endif”
+
+* 处理“#include”预编译指令，将被包含的文件从插入到该预编译指令的位置。注意，这个过程是递归进行的，也就是说被包含的文件可能还包含其他文件。
+
+* 删除所有的注释 “//” 和 “/* */”
+
+* 添加行号和文件名标识，比如#2 “hello.c” 2，以便于编译时编译器产生调试用的行号信息以及用于编译时产生的编译错误或警告时能够显示行号。
+
+* 保留所有的#progma 编译器指令，因为编译器须要使用它们
+
+## 编译
+
+编译过程就是把预处理完的文件进行一系列词法分析、语法分析、语义分析及优化后生产相应的汇编代码文件，这个过程是整个程序构建的核心部分，也是最复杂的部分
+
+* 编译过程一般可以分为6步：扫描（词法分析）、语法分析、语义分析、源代码优化、代码生成、目标代码优化。
+
+* 首先源代码程序被输入到扫描器，扫描器的任务很简单，它只是简单的进行词法分析。词法分析产生的记号一般可以分为：关键字、标识符、字面量和特殊符号几类。在识别记号的同时，扫描器也完成了其他工作。比如将标识符存放到符号表，将数字、字符串常量存放到文字表等等，以备后面步骤使用。
+
+* 接下来语法分析器将对由扫描器产生的的记号进行语法分析，从而产生语法树。简单的讲，由语法分析器生成的语法树就是以表达式为节点的树。例如C语言的代码`array[index] = (index + 4) * (2 + 6)`的语法分析生成的语法树为下图所示。
+
+  ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/syntax_tree_demo.png)
+
+* 
+
+## 汇编
+
+汇编器是将汇编代码转变成机器可以执行的指令，每一个汇编语句几乎都对应一条机器指令。
 
 * 代码段(.text)：目标文件中，源代码编译后的机器指令经常被放在代码段里
 
