--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -26,13 +26,26 @@
 
 * 编译过程一般可以分为6步：扫描（词法分析）、语法分析、语义分析、源代码优化、代码生成、目标代码优化。
 
-* 首先源代码程序被输入到扫描器，扫描器的任务很简单，它只是简单的进行词法分析。词法分析产生的记号一般可以分为：关键字、标识符、字面量和特殊符号几类。在识别记号的同时，扫描器也完成了其他工作。比如将标识符存放到符号表，将数字、字符串常量存放到文字表等等，以备后面步骤使用。
+* 扫描：首先源代码程序被输入到扫描器，扫描器的任务很简单，它只是简单的进行词法分析。词法分析产生的记号一般可以分为：关键字、标识符、字面量和特殊符号几类。在识别记号的同时，扫描器也完成了其他工作。比如将标识符存放到符号表，将数字、字符串常量存放到文字表等等，以备后面步骤使用。
 
-* 接下来语法分析器将对由扫描器产生的的记号进行语法分析，从而产生语法树。简单的讲，由语法分析器生成的语法树就是以表达式为节点的树。例如C语言的代码`array[index] = (index + 4) * (2 + 6)`的语法分析生成的语法树为下图所示。
+* 语法分析：接下来语法分析器将对由扫描器产生的的记号进行语法分析，从而产生语法树。简单的讲，由语法分析器生成的语法树就是以表达式为节点的树。例如C语言的代码`array[index] = (index + 4) * (2 + 6)`的语法分析生成的语法树为下图所示。
 
   ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/syntax_tree_demo.png)
 
-* 
+* 语义分析：语法分析仅仅是完成了对表达式的语法层面的分析，但是它不了解这个语句是否有真正意义，比如两个指针做乘法运算是没有意义的。语义分析程序发现类型不匹配的时候，编译器会报错。编译器所能分析的语义是静态语义，静态语义是指在编译器可以确定的，对应的动态语义是只有在运行期才能确定的语义。
+
+* 中间语言生成（源代码优化）：源码级优化器会在源代码级别进行优化，例如(2+6)这个表达式可以被优化掉，因为它的值在编译期就可以被确定。类似的还有好多其他复杂的优化过程。优化器直接在语法树上做优化比较困难，所以源代码优化器往往将整个语法树转换成中间代码，他是语法树的顺序表示，其实它非常接近目标代码，但是它跟目标机器和运行时环境无关，比如它不包含数据的尺寸、变量地址、寄存器名字。
+
+* 中间代码使得编译器可以被分为前端和后端。编译期前端负责产生机器无关的中间代码，编译期后端将中间代码转换成目标机器代码。这样对于一些可以跨平台的编译期而言，可以针对不同的平台使用同一个前端和针对不同机器平台的数个后端。
+
+* 目标代码生成与优化：代码生成器将中间代码转换成目标机器代码，这个过程依赖于目标机器，因为不同的机器有着不同的字长、寄存器、数据类型等。目标代码优化器会对目标代码进行优化，比如选择合适的寻址方式、使用位移来代替乘法运算、删除多余的指令等。
+
+* 定义其他模块的全局变量和函数在最终运行时的绝对地址都要在最终链接的时候才能确定。所以现代的编译期可以将一个源代码文件编译成一个未链接的目标文件，然后由链接器最终将这些目标文件链接起来形成可执行文件。
+
+## 链接
+
+* 一个复杂的软件，人们把每个源代码模块独立的编译，然后按照需要将它们组装起来，这个组装模块的过程就是链接。链接的主要内容就是把各个模块之间相互引用的部分都处理好，使得各个模块之间能够争取的衔接。链接的主要过程包括地址和空间分配、符号决议（符号绑定）和重定位。
+* 比如在程序模块main.c中使用另外一个模块func.c中的函数foo()。我们在main.c模块中每一处调用foo的时候都必须确切的知道foo这个函数的地址，但是由于每个模块都是单独编译的，编译main.c的时候并不知道foo函数的地址，所以暂时把调用foo的指令的目标地址搁置，等待最后链接的时候由链接器去将这些指令的目标地址修正（重定位）。
 
 ## 汇编
 
