--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -47,12 +47,12 @@
 * 一个复杂的软件，人们把每个源代码模块独立的编译，然后按照需要将它们组装起来，这个组装模块的过程就是链接。链接的主要内容就是把各个模块之间相互引用的部分都处理好，使得各个模块之间能够争取的衔接。链接的主要过程包括地址和空间分配、符号决议（符号绑定）和重定位。
 * 比如在程序模块main.c中使用另外一个模块func.c中的函数foo()。我们在main.c模块中每一处调用foo的时候都必须确切的知道foo这个函数的地址，但是由于每个模块都是单独编译的，编译main.c的时候并不知道foo函数的地址，所以暂时把调用foo的指令的目标地址搁置，等待最后链接的时候由链接器去将这些指令的目标地址修正（重定位）。
 
-## 汇编
+## 目标文件
 
-汇编器是将汇编代码转变成机器可以执行的指令，每一个汇编语句几乎都对应一条机器指令。
-
+* 编译器编译源代码后生成的文件叫做目标文件，目标文件从结构上讲，它是已经编译后的可执行文件格式，只是还没有经过链接的过程。
+* 不光是可执行文件按照可执行文件格式存储，动态链接库及静态链接库文件都按照可执行文件格式存储。
+* 目标文件的内容有编译后的机器指令代码、数据，还有链接时所需要的一些信息，例如符号表、调试信息、字符串等。一般目标文件将这些信息按不同的属性，以“节”（Section）的形式存储，有时候也叫“段”（Segment），它们都标识一个一定长度的区域。
 * 代码段(.text)：目标文件中，源代码编译后的机器指令经常被放在代码段里
-
 * 数据段(.data)：目标文件中，源代码编译后的全局变量和局部静态变量数据经常放在数据段
 
 * .bss段：目标文件中，源代码编译后的未初始化的全局变量和局部静态变量一般放在.bss段里
@@ -60,3 +60,7 @@
 * 只读数据段(.rodata)：只读数据段存放的是只读数据，一般是程序里面的只读变量和字符串常量。有时候编译器会把字符串常量放到数据段(.data)
 
 * 总体来说，程序源代码被编译以后主要分成两种段：程序指令与程序数据。代码段属于程序指令，而数据段和.bss段属于程序数据。对于进程来说，指令区域是只读的，数据区域是可读写的。
+
+## 汇编
+
+汇编器是将汇编代码转变成机器可以执行的指令，每一个汇编语句几乎都对应一条机器指令。
