--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -2,4 +2,20 @@
 
 ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-common.png)
 
-## 
+常用数据结构复杂度：
+
+![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-all-complexity.png)
+
+![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-array-sort-complexity.png)
+
+## 数组
+
+查询：O(1)
+
+插入删除：平均O(n)
+
+## 链表
+
+查询：O(n)
+
+插入删除：O(1)
