--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -8,14 +8,11 @@
 
 ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-array-sort-complexity.png)
 
-## 数组
+## 优先队列
 
-查询：O(1)
+实现机制：堆（二叉堆、多项式堆、斐波那契堆）、二叉搜索树
 
-插入删除：平均O(n)
+堆：
 
-## 链表
+![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-heap-complexity.png)
 
-查询：O(n)
-
-插入删除：O(1)
