--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -46,19 +46,39 @@
 
 * 一个复杂的软件，人们把每个源代码模块独立的编译，然后按照需要将它们组装起来，这个组装模块的过程就是链接。链接的主要内容就是把各个模块之间相互引用的部分都处理好，使得各个模块之间能够争取的衔接。链接的主要过程包括地址和空间分配、符号决议（符号绑定）和重定位。
 * 比如在程序模块main.c中使用另外一个模块func.c中的函数foo()。我们在main.c模块中每一处调用foo的时候都必须确切的知道foo这个函数的地址，但是由于每个模块都是单独编译的，编译main.c的时候并不知道foo函数的地址，所以暂时把调用foo的指令的目标地址搁置，等待最后链接的时候由链接器去将这些指令的目标地址修正（重定位）。
+* 在链接中，我们将函数和变量统称为符号，函数名或变量名就是符号名。链接的过程很关键的一部分就是符号的管理，每一个目标文件都会有一个相应的符号表，这个表里记录了目标文件中所用到的所有符号。每个定义的符号有个对应的值，叫做符号值，对于变量和函数来说，符号值就是它们的地址。
 
 ## 目标文件
 
 * 编译器编译源代码后生成的文件叫做目标文件，目标文件从结构上讲，它是已经编译后的可执行文件格式，只是还没有经过链接的过程。
+
 * 不光是可执行文件按照可执行文件格式存储，动态链接库及静态链接库文件都按照可执行文件格式存储。
+
 * 目标文件的内容有编译后的机器指令代码、数据，还有链接时所需要的一些信息，例如符号表、调试信息、字符串等。一般目标文件将这些信息按不同的属性，以“节”（Section）的形式存储，有时候也叫“段”（Segment），它们都标识一个一定长度的区域。
+
+* 目标文件的基本结构图：
+
+  |          基本结构图          |
+  | :--------------------------: |
+  |            Header            |
+  |            .text             |
+  |            .data             |
+  |             .bss             |
+  |          ... 其他段          |
+  | 段表（Section header table） |
+  |           字符串表           |
+  |            符号表            |
+  |             ...              |
+
+* 文件头定义了魔数、文件机器字节长度、数据存储方式、版本、运行平台、ABI版本、重定位类型、硬件平台、入口地址、段表的位置和长度、段的数量等。
 * 代码段(.text)：目标文件中，源代码编译后的机器指令经常被放在代码段里
 * 数据段(.data)：目标文件中，源代码编译后的全局变量和局部静态变量数据经常放在数据段
-
 * .bss段：目标文件中，源代码编译后的未初始化的全局变量和局部静态变量一般放在.bss段里
-
 * 只读数据段(.rodata)：只读数据段存放的是只读数据，一般是程序里面的只读变量和字符串常量。有时候编译器会把字符串常量放到数据段(.data)
-
+* ... 其他段
+* 段表：段表是目标文件中除了文件头意外最重要的结构，他描述了目标文件各个段的信息，比如每个段的段名、段的长度、在文件中的偏移、读写权限以及段的其他属性。目标文件的段结构就是由段表决定的，编译器、链接器和装载器都是依靠段表来定位和访问各个段的属性的。
+* 字符串表：目标文件中用到了很多字符串，比如段名、变量名等，因为字符串的长度往往是不定的，所以用固定的结构来表示它比较困难。一种很常见的做法是把字符串集中起来存放到一个表，然后用字符串在表中的偏移来引用字符串。
+* 符号表：符号表的结构很简单，它是一个Elf32_Sym结构的数组，每个结构对应一个符号。
 * 总体来说，程序源代码被编译以后主要分成两种段：程序指令与程序数据。代码段属于程序指令，而数据段和.bss段属于程序数据。对于进程来说，指令区域是只读的，数据区域是可读写的。
 
 ## 汇编
