--- a/leetCode/4.Map&Set.md
+++ b/leetCode/4.Map&Set.md
@@ -16,3 +16,12 @@
 
 ![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-heap-complexity.png)
 
+## Map & Set
+
+HashMap HashSet (元素是乱序的)
+
+查找 O(1)
+
+TreeMap TreeSet (元素是排好序的)（一般为二叉搜索树实现）
+
+查找 O(logN)
