--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -48,6 +48,14 @@
 * 比如在程序模块main.c中使用另外一个模块func.c中的函数foo()。我们在main.c模块中每一处调用foo的时候都必须确切的知道foo这个函数的地址，但是由于每个模块都是单独编译的，编译main.c的时候并不知道foo函数的地址，所以暂时把调用foo的指令的目标地址搁置，等待最后链接的时候由链接器去将这些指令的目标地址修正（重定位）。
 * 在链接中，我们将函数和变量统称为符号，函数名或变量名就是符号名。链接的过程很关键的一部分就是符号的管理，每一个目标文件都会有一个相应的符号表，这个表里记录了目标文件中所用到的所有符号。每个定义的符号有个对应的值，叫做符号值，对于变量和函数来说，符号值就是它们的地址。
 
+### 静态链接
+
+* 当我们有两个目标文件时，如何将它们链接起来形成一个可执行文件，这基本上就是链接的核心内容：静态链接。对于链接器来说，整个链接过程中，它就是将几个输入目标文件加工后合并成一个输出文件。
+* 链接过程中，多个目标文件的相同性质的段会合并在一起，比如将所有输入文件的.text合并到输出文件的.text段，接着是.data段、.bss段等。
+* 链接器为目标文件分配地址和空间，这里的“地址和空间”有两个含义：第一个是在输出的可执行文件中的空间，第二个是装载后的虚拟地址中的虚拟地址空间。比如.text和.data，它们在文件中虚拟地址中都要分配空间，因为它们在两者中都存在，对于.bss段来说，分配空间的意义只局限于虚拟地址空间，因为它在文件中并没有内容。
+* 整个静态链接过程分两步：
+* 1.空间与地址分配：
+
 ## 目标文件
 
 * 编译器编译源代码后生成的文件叫做目标文件，目标文件从结构上讲，它是已经编译后的可执行文件格式，只是还没有经过链接的过程。
@@ -73,7 +81,7 @@
 * 文件头定义了魔数、文件机器字节长度、数据存储方式、版本、运行平台、ABI版本、重定位类型、硬件平台、入口地址、段表的位置和长度、段的数量等。
 * 代码段(.text)：目标文件中，源代码编译后的机器指令经常被放在代码段里
 * 数据段(.data)：目标文件中，源代码编译后的全局变量和局部静态变量数据经常放在数据段
-* .bss段：目标文件中，源代码编译后的未初始化的全局变量和局部静态变量一般放在.bss段里
+* .bss段：目标文件中，源代码编译后的未初始化的全局变量和局部静态变量一般放在.bss段里。.bss段在目标文件和可执行文件中不占用文件的空间，它在装载时占用地址空间。
 * 只读数据段(.rodata)：只读数据段存放的是只读数据，一般是程序里面的只读变量和字符串常量。有时候编译器会把字符串常量放到数据段(.data)
 * ... 其他段
 * 段表：段表是目标文件中除了文件头意外最重要的结构，他描述了目标文件各个段的信息，比如每个段的段名、段的长度、在文件中的偏移、读写权限以及段的其他属性。目标文件的段结构就是由段表决定的，编译器、链接器和装载器都是依靠段表来定位和访问各个段的属性的。
