--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -48,7 +48,7 @@ TreeMap TreeSet (元素是排好序的)（一般为二叉搜索树实现）
       }
   ```
 
-* 中序遍历是指，对于树中的任意节点来说，先打印它的左子树，然后再打印它本身，最后打印它的右子树。（左-根-右）
+* 中序遍历是指，对于树中的任意节点来说，先打印它的左子树，然后再打印它本身，最后打印它的右子树。（左-根-右），二叉搜索树的中序遍历结果是一个升序/降序数组
 
   ```swift
       var traversalRes: [Int] = []
@@ -72,4 +72,52 @@ TreeMap TreeSet (元素是排好序的)（一般为二叉搜索树实现）
       }
   ```
 
+
+## 递归
+
+```swift
+func recursion(level: Int, param1: Any, param2: Any, ...) {
+  // 递归一般都有个level，代表当前是第几层
+  if level > maxLevel { // 递归的终止条件，一般写在前面，防止死循环
+    print(res)
+    return
+  }
   
+  // 递归过程中进行数据的处理
+  processData(level, param1, param2)
+  
+  // 进行递归，去下一层处理数据，p1，p2是param1，param2处理后的数据
+  recursion(level +1, p1, p2, ...)
+  
+  // 下一层处理完之后，如果需要的话可能进行一些收尾操作
+  if needed {
+      reverseState(level)
+  }
+}
+```
+
+## 分治
+
+```swift
+func devideConquer(problem, param1, param2, ...) {
+   // problem就是当前层要处理的问题，通过分治分成子问题subproblem去下一层处理
+  if problem == nil { // 分治的终止条件
+    print(res)
+    return
+  }
+  // 准备数据，处理数据
+  let data =  prepareData(problem)
+  // 将大问题拆分成若干个小问题
+  let subproblems = splitProblem(problem, data)
+  
+  // 对不同的子问题进行递归处理，得到每一步的子结果
+  let subresult1 = devideConquer(subproblems[0], p1, p2, ...)
+  let subresult2 = devideConquer(subproblems[1], p1, p2, ...)
+  let subresult3 = devideConquer(subproblems[1], p1, p2, ...)
+  ...
+  
+  // 合并处理子结果
+  let result = processResult(subresult1, subresult2, subresult3, ...)
+}
+```
+
