--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -121,3 +121,9 @@ func devideConquer(problem, param1, param2, ...) {
 }
 ```
 
+## 贪心算法
+
+定义：在对问题求解时，总是做出在当前看来是最好的选择。
+
+试用场景：简单来说，问题能够分解成子问题来解决，子问题的最优解能递推到最终问题的最优解。这种子问题最优解成为最优子结构。
+
