--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -54,7 +54,8 @@
 * 链接过程中，多个目标文件的相同性质的段会合并在一起，比如将所有输入文件的.text合并到输出文件的.text段，接着是.data段、.bss段等。
 * 链接器为目标文件分配地址和空间，这里的“地址和空间”有两个含义：第一个是在输出的可执行文件中的空间，第二个是装载后的虚拟地址中的虚拟地址空间。比如.text和.data，它们在文件中虚拟地址中都要分配空间，因为它们在两者中都存在，对于.bss段来说，分配空间的意义只局限于虚拟地址空间，因为它在文件中并没有内容。
 * 整个静态链接过程分两步：
-* 1.空间与地址分配：
+* 1.空间与地址分配：扫描所有的输入目标文件，获得它们的各个段的长度、属性和位置，并且将输入目标文件中的符号表中所有的符号定义和符号引用收集起来，统一放到一个全局符号表。这一步中，链接器能够获得所有输入目标文件的段长度，并且将它们合并，计算出输出文件中各个段合并后的长度与位置，建立映射关系。
+* 2.符号解析与重定位：使用上面第一步中收集到的所有信息，读取输入文件中段的数据、重定位信息，并且进行符号解析与重定位、调整代码中的地址等。重定位过程是链接的核心。
 
 ## 目标文件
 
