--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -127,3 +127,69 @@ func devideConquer(problem, param1, param2, ...) {
 
 试用场景：简单来说，问题能够分解成子问题来解决，子问题的最优解能递推到最终问题的最优解。这种子问题最优解成为最优子结构。
 
+## 广度优先搜索 & 深度优先搜索
+
+广度优先搜索（BFS）：从树的根结点开始，依次访问它的第一层的子节点，然后再依次访问第一次子节点的每一个子节点，重复下去
+
+![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-bfs.png)
+
+```swift
+func BFS(graph, start: T, end: T) { // graph:树或者图， start:根结点, end: 尾结点
+  var queue: [T] = []
+  var visited = Set<T>() // 在图中用来判重，树不需要判重
+  queue.append(start)
+  visited.append(start) // 标记已经被访问过
+  
+  while !queue.isEmpty {
+    let node = queue.pop()
+    visited.append(node)
+    
+    process(node) // 如果需要的话，对当前节点进行数据处理
+    
+    let nodes = generateRelatedNodes(node)  // 将这个节点的所有子节点取出来，并在visited里判重，取出没有访问过的子节点
+    
+    queue.push(nodes) // 将子节点们加到队列里，继续循环
+    
+  }
+}
+
+```
+
+深度优先搜索（DFS）：
+
+![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-dfs.png)
+
+![https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-dfs-graph.png)
+
+```swift
+var visited = Set<T>() // 在图中用来判重，树不需要判重
+// 递归写法（推荐）
+func DFS(node: T, visited) { // node: 当前节点 
+  visited.append(node)
+  process(node) // 如果需要的话，对当前节点进行数据处理
+  for nextNode in node.children() {
+    if !visited.contains(nextNode) {
+      DFS(node: nextNode, visited)
+    }
+  }
+}
+// 非递归写法
+func DFS(tree: T) { // tree:树或者图
+  var stack: [T] = []
+  var visited = Set<T>() // 在图中用来判重，树不需要判重
+  stack.append(tree.root)
+  
+  while !stack.isEmpty {
+    let node = stack.pop()
+    visited.append(node)
+    
+    process(node) // 如果需要的话，对当前节点进行数据处理
+    
+    let nodes = generateRelatedNodes(node)  // 将这个节点的所有子节点取出来，并在visited里判重，取出没有访问过的子节点
+    
+    stack.push(nodes) // 将子节点们加到栈里，继续循环
+    
+  }
+}
+```
+
