--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -48,6 +48,12 @@
 * 比如在程序模块main.c中使用另外一个模块func.c中的函数foo()。我们在main.c模块中每一处调用foo的时候都必须确切的知道foo这个函数的地址，但是由于每个模块都是单独编译的，编译main.c的时候并不知道foo函数的地址，所以暂时把调用foo的指令的目标地址搁置，等待最后链接的时候由链接器去将这些指令的目标地址修正（重定位）。
 * 在链接中，我们将函数和变量统称为符号，函数名或变量名就是符号名。链接的过程很关键的一部分就是符号的管理，每一个目标文件都会有一个相应的符号表，这个表里记录了目标文件中所用到的所有符号。每个定义的符号有个对应的值，叫做符号值，对于变量和函数来说，符号值就是它们的地址。
 
+### ABI
+
+* 如果要使两个编译器编译出来的目标文件能够相互链接，那么这两个目标文件必须满足：采用同样的目标文件格式、拥有同样的符号修饰标准、变量的内存分布方式相同、函数的调用方式相同，等等。其中我们把符号修饰标准、变量内存布局、函数调用方式等这些跟可执行代码二进制兼容性相关的内容成为ABI。
+* API和ABI都是所谓的应用程序接口，只是它们所描述的接口所在层面不一样。API往往是指源代码级别的接口，而ABI是指二进制层面的接口。
+* 影响ABI的因素非常多，硬件、编程语言、编译器、链接器、操作系统等都会影响ABI。
+
 ### 静态链接
 
 * 当我们有两个目标文件时，如何将它们链接起来形成一个可执行文件，这基本上就是链接的核心内容：静态链接。对于链接器来说，整个链接过程中，它就是将几个输入目标文件加工后合并成一个输出文件。
