--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -193,3 +193,21 @@ func DFS(tree: T) { // tree:树或者图
 }
 ```
 
+## 二分查找
+
+* 适用场景：有序数组，存在上下界，能够通过索引访问(链表不适合，数组适合)
+
+```swift
+let left = 0
+let right = array.count - 1
+while left <= right {
+  let mid = (left + right) / 2
+  if array[mid] == target {
+    return target
+  } else if array[mid] < target {
+    left = mid + 1
+  } else {
+    right = mid - 1
+  }
+}
+```
