--- a/leetCode/理论.md
+++ b/leetCode/理论.md
@@ -1,4 +1,4 @@
-常用数据结构：
+## 常用数据结构：
 
 ![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-common.png)
 
@@ -212,3 +212,32 @@ while left <= right {
   }
 }
 ```
+
+## 字典树（Trie树）
+
+* Trie树，又称单词查找树或键树，是一种树形结构，是一种哈希树的变种。典型应用是用于统计和排序大量的字符串（但不仅限于字符串），所以经常被搜索引擎系统用于文本词频统计。
+
+![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-trie-ex.png)
+
+* 优点：最大限度地减少无谓的字符串比较，查询效率比哈希表高。
+* 核心思想：空间换时间。利用字符串的公共前缀来降低查询时间的开销以达到提高效率的目的。
+
+![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-trie1.png)
+
+![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/algorithm/algorithm-trie2.png)
+
+```swift
+//定义
+static let asciiCount = 256 //整个ASCII码的所有字符的数量， 也可以只用字母表大小写字母数量 26 * 2
+struct TrieNode {
+  var isEndOfWord = false // 是否是整个单词的结尾
+  var children: [TrieNode] = [] // children数组的长度为asciiCount
+}
+
+```
+
+* 基本性质：
+  1. 根结点不包含字符，除根结点外每一个节点都只包含一个字符
+  2. 从根结点到某一个节点，路径上经过的字符连接起来，为该节点对应的字符串。
+  3. 每个节点的所有子节点包含的字符都不相同。
+
