--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -62,6 +62,7 @@
 * 整个静态链接过程分两步：
 * 1.空间与地址分配：扫描所有的输入目标文件，获得它们的各个段的长度、属性和位置，并且将输入目标文件中的符号表中所有的符号定义和符号引用收集起来，统一放到一个全局符号表。这一步中，链接器能够获得所有输入目标文件的段长度，并且将它们合并，计算出输出文件中各个段合并后的长度与位置，建立映射关系。
 * 2.符号解析与重定位：使用上面第一步中收集到的所有信息，读取输入文件中段的数据、重定位信息，并且进行符号解析与重定位、调整代码中的地址等。重定位过程是链接的核心。
+* 小结：目标文件再被链接成最终可执行文件时，输入目标文件中各个段被合并到输出文件中，链接器为它们分配在输出文件中的空间和地址。一旦输入段的最终地址被确定，接下来就可以进行符号的解析与重定位，链接器会把各个输入目标文件中对于外部符号的引用进行解析，把每个段中需重定位的指令和数据进行“修补”，使它们都指向正确的位置。
 
 ## 目标文件
 
@@ -99,3 +100,16 @@
 ## 汇编
 
 汇编器是将汇编代码转变成机器可以执行的指令，每一个汇编语句几乎都对应一条机器指令。
+
+## 装载
+
+* 可执行文件只有装载到内存以后才能被CPU执行。程序执行时所需要的指令和数据必须在内存中才能够正常运行。
+
+* 创建一个进程，装载相应的可执行文件并且执行。在有虚拟存储的情况下，要做三件事：
+
+  1.创建一个独立的虚拟地址空间。
+
+  2.读取可执行文件头，并且建立虚拟空间与可执行文件的映射关系。
+
+  3.将CPU的执行寄存器设置成可执行文件的入口地址，启动运行。
+
