--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -113,3 +113,25 @@
 
   3.将CPU的执行寄存器设置成可执行文件的入口地址，启动运行。
 
+* 上面的步骤执行完之后，可执行文件的真正指令和数据都没有被装入到内存中。假设程序的入口地址为0x08048000，当CPU开始打算执行这个地址的指令时，发现页面0x08048000~0x08049000是个空页面，于是它认为这是个`页错误`,CPU将控制权交给操作系统，操作系统有专门的页错误处理例程来处理。这时候上面第二步建立起来的数据结构起了关键作用，操作系统查询这个数据结构，找到空页面所在的VMA（虚拟内存区域），计算出相应的页面在可执行文件中的偏移，然后在物理内存中分配一个物理页面，将进程中虚拟页与分配的物理页之间建立映射关系，然后把控制权再还给进程，进程从刚才页错误的位置重新开始执行。随着进程的执行，页错误也会不断地产生，操作系统也会为进程分配相应的物理页来满足进程执行的需求。
+
+* 可执行文件中，段的权限往往下面三种：
+
+  1.以代码段为代表的的权限为可读可执行的段
+
+  2.以数据段和BSS段为代表的权限为可读可写的段。
+
+  3.以只读数据段为代表的权限为只读的段
+
+* 对于相同权限的段，把它们合并到一起当做一个段进行映射。合并起来的段一个段映射一个页（如果段的大小没有超过一页大小）。合并在一起的段（Section）叫做一个Segment
+
+* 在操作系统里，VMA除了被用来映射可执行文件中的各个Segment外，操作系统通过使用VMA来对进程的地址空间进行管理。进程在执行的时候还需要用到栈、堆等空间，它们在进程的虚拟空间中的表现也是以VMA形式存在的。
+
+* 进程中虚拟地址空间：操作系统通过给进程空间划分出一个个VMA来管理进程的虚拟空间。基本原则是将相同权限属性的、有相同映像文件的映射而成一个VMA。一个进程基本上可以分为如下几种VMA区域：
+
+  1. 代码VMA，权限只读、可执行；有映像文件。
+  2. 数据VMA，权限可读写 、可执行；有映像文件。
+  3. 堆VMA，权限可读写、可执行；无映像文件，匿名，可向上扩展
+  4. 栈VMA，权限可读写、不可执行；无映像文件，匿名，可向下扩展
+
+![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/load_VMA.png)
