--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -134,4 +134,7 @@
   3. 堆VMA，权限可读写、可执行；无映像文件，匿名，可向上扩展
   4. 栈VMA，权限可读写、不可执行；无映像文件，匿名，可向下扩展
 
+  > 由于可执行文件在装载时实际上是被映射的虚拟空间，所以可执行文件很多时候又被叫做映像文件。
+
 ![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/load_VMA.png)
+
