--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -1,4 +1,15 @@
+## 软件体系结构（1.3站得高，望得远 P8）
+
+* 系统软件体系结构：
+![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/system_soft_ architecture.png)
+* 每个层次之间都需要互相通信，既然要通信就必须有一个通信的协议，我们一般将其称为接口(Interface)，接口的下面那层是接口的提供者，由他定义接口；接口的上面那层是接口的使用者。层次体系中，接口是被精心设计过的，尽量保持稳定不变，那么理论上层次之间只需要遵循这个接口，任何一个层都可以被修改或被替换。除了硬件和应用程序，其他都是所谓的中间层，每个中间层都是对它下面的那层的包装和扩展。最近流行的虚拟机技术更是在硬件和操作系统之间增加了一层虚拟层，使得一个计算机上可以同时运行多个操作系统，这个也是层次结构带来的好处，在尽可能少改变甚至不改变其他层的情况下，新增一个层次就可以提供前所未有的功能。
+
+
 * 我们的软件体系中，最上层的是应用程序，比如我们平时用到的网络浏览器、Email客户端、多媒体播放器、图片浏览器等。从整个层次结构上来看，开发工具与应用程序是属于同一个层次的，因为它们都是用一个接口，那就是操作系统应用程序编程接口(Application Programming Interface)。应用程序接口的提供者是运行库，什么样的运行库提供什么样的API。
+
+* 运行时库使用操作系统提供的系统调用接口(System call Interface)，系统调用接口在实现中往往是以软件中断(Software Interrupt)的方式提供
+
+* 操作系统内核层对于硬件层来说是硬件接口的使用者，而硬件是接口的定义者，硬件的接口定义决定了操作系统内核，具体来讲就是驱动程序如何操作硬件，如何与硬件进行通信。这种接口叫做硬件规格(Hardware Specification)
 
 * 从程序源代码到最终可执行文件的4个步骤：预处理（Prepressing）、编译（Compilation）、汇编（Assembly）、链接（Linking）。
 
