--- a/笔记/程序员的自我修养笔记.md
+++ b/笔记/程序员的自我修养笔记.md
@@ -14,9 +14,21 @@
 * 操作系统的一个功能是提供抽象的接口，另一个主要功能是管理硬件资源
 * 多任务(multi-tasking)系统：目前几乎所有现代的操作系统都是采用这种方式。操作系统接管了所有的硬件资源，并且本身运行在一个受硬件保护的级别。所有的应用程序都以进程的方式运行在比操作系统权限更低的级别，每个进程都有自己独立的地址空间，使得进程之间的地址相互隔离。CPU由操作系统统一进行分配，每个进程根据进程优先级的高低都有机会得到CPU，但是如果运行时间超出了一定的时间，操作系统会暂停该进程，将CPU资源分配给其他得等待运行的进程。这种CPU的分配方式即所谓的抢占式，操作系统可以强制剥夺CPU资源并分配给它认为目前最需要的进程。如果操作系统分配给每个进程的时间都很短，即CPU在多个进程间快速的切换，从而造成了很多进程都在同时运行的假象。
 
-### 地址空间（1.5 内存不够怎么办 P15）
+### 内存（1.5 内存不够怎么办 P15）
 
 * 地址空间分两种：虚拟地址空间(Virtual Address Space)和物理地址空间(Pyhsical Address Space)。物理地址空间是实实在在存在的，存在于计算机中，而且对于每台计算机来说只有唯一一个，你可以把物理空间想象成物理内存，比如你的计算机用的Inter的Pentium 4的处理器，那么它是32位的机器，计算机地址线有32条(实际上36条)，那么物理空间就有4GB。但你的计算机只装了512MB的内存，那么其实物理地址的真正有效部分只有0x00000000~0x1FFFFFFF，其他部分都无效。虚拟地址空间是指虚拟的、人们想象出来的地址空间，它并不存在，每个进程都有自己独立的虚拟空间，而且每个进程只能访问自己的地址空间，这样就有效地做到了进程隔离。
+
+* 内存分页(Paging)：分页的基本方法是把地址空间人为的等分成固定大小的页，每一页的大小由硬件决定，或硬件支持多种大小的页，由操作系统决定页的大小。比如Inter Pentium系列处理器支持4KB或者4MB的页大小，那么操作系统可以选择每页大小为4KB，也可以选择为4MB，但是在同一时刻只能选择一种大小。
+
+  ![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/system_soft_cache_example.png)
+
+  ![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/system_soft_cache1.png)
+
+  ![](https://raw.githubusercontent.com/ChaselAn/dev-blog/master/Source/Notes/ziwoxiuyang/system_soft_cache2.png)
+
+### 线程 （1.6 众人拾柴火焰高 P19）
+
+
 
 
 * 从程序源代码到最终可执行文件的4个步骤：预处理（Prepressing）、编译（Compilation）、汇编（Assembly）、链接（Linking）。
